--- a/OrderService.Infrastructure/OrderService.Infrastructure.csproj
+++ b/OrderService.Infrastructure/OrderService.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrderService.Application\OrderService.Application.csproj" />
+  </ItemGroup>
+
 </Project>
