1. Added Unit of Work Pattern 2. Modify the Handler. now persist idempoten first -> order. checks idempoten at duplication on db level 3. Added dbcontext using postgresql 4. Update Entities for postgresql's demand

--- a/OrderService.API/OrderService.API.csproj
+++ b/OrderService.API/OrderService.API.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrderService.Application\OrderService.Application.csproj" />
+    <ProjectReference Include="..\OrderService.Infrastructure\OrderService.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
