--- a/OrderService.API/appsettings.json
+++ b/OrderService.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5432;Database=order;Username=postgres;Password=password"
+  },
   "AllowedHosts": "*"
 }
